# flask-sqlalchemy-mysql-sandbox

./: docker-compose.yaml  dockerfile  pyproject.toml
app/: app.py  db.py  examples.py  schemas.py
app/entities/: __init__.py  item.py
