[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kosuke Uchida <k_uchida@ardito.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
PyMySQL = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
